tests/baselines/reference/declareAlreadySeen.errors.txt
==== tests/cases/compiler/declareAlreadySeen.ts (4 errors) ====
    module M {
        declare declare var x;
                ~~~~~~~
!!! declareAlreadySeen.ts(2,13): error TS1028: Accessibility modifier already seen.
        declare declare function f();
                ~~~~~~~
!!! declareAlreadySeen.ts(3,13): error TS1028: Accessibility modifier already seen.
    
        declare declare module N { }  
                ~~~~~~~
!!! declareAlreadySeen.ts(5,13): error TS1028: Accessibility modifier already seen.
    
        declare declare class C { }
                ~~~~~~~
!!! declareAlreadySeen.ts(7,13): error TS1028: Accessibility modifier already seen.
    }